--- a/netlify/netlify.toml
+++ b/netlify/netlify.toml
@@ -1,9 +1,9 @@
 [build]
-  command = "npm run build"
-  publish = "build"
+  command = "npm install && npm run build"
+  publish = "static"
   functions = "netlify/functions"
 
 [[redirects]]
   from = "/*"
-  to = "static"
+  to = "/index.html"
   status = 200
