--- a/netlify/netlify.toml
+++ b/netlify/netlify.toml
@@ -1,9 +1,7 @@
 [build]
-  command = "npm install && npm run build"
-  publish = "static"
-  functions = "netlify/functions"
+  functions = "functions"
 
 [[redirects]]
-  from = "/*"
-  to = "/index.html"
+  from = "/.netlify/functions/*"
+  to = "/.netlify/functions/:splat"
   status = 200
