--- a/eps-api/package.json
+++ b/eps-api/package.json
@@ -1,10 +1,19 @@
 {
+  "name": "eps-api",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "build": "echo 'Skipping build step'"
+  },
   "dependencies": {
-    "axios": "^1.7.2",
-    "body-parser": "^1.20.2",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "openai": "^4.51.0",
-    "path": "^0.12.7"
-  }
+    "express": "^4.17.1",
+    "openai": "^3.1.0",
+    "child_process": "^1.0.2"
+  },
+  "devDependencies": {},
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
