--- a/static/netlify/netlify.toml
+++ b/static/netlify/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-  functions = "functions"
+  command = "cd ../eps-api && npm install && npm run build"
+  publish = "../static"
+  functions = "netlify/functions"
 
-[[redirects]]
-  from = "/.netlify/functions/*"
-  to = "/.netlify/functions/:splat"
-  status = 200
+[context.production.environment]
+  OPENAI_API_KEY = "your-openai-api-key"
