--- a/static/netlify.toml
+++ b/static/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "" # Diretório raiz do projeto
-  command = "npm install --prefix eps-api && npm run build --prefix eps-api"
-  publish = "static" # Diretório para publicar os arquivos estáticos
+  command = "npm install --prefix eps-api && npm run build"
+  publish = "/opt/build/repo/static" # Diretório para publicar os arquivos estáticos
 
 [functions]
   directory = "static/netlify/functions"
