--- a/eps-api/package.json
+++ b/eps-api/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "openai": "^3.1.0"
+    "openai": "^3.1.0",
+    "node-fetch": "3.3.2"
   },
   "devDependencies": {},
   "keywords": [],
