--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,8 @@
 [build]
-  command = "npm install --prefix eps-api && npm run build --prefix eps-api"
   publish = "static"
+  functions = "netlify/functions"
 
-[functions]
-  directory = "netlify/functions"
+[[redirects]]
+  from = "/eps"
+  to = "/.netlify/functions/eps"
+  status = 200
