--- a/netlify.toml
+++ b/netlify.toml
@@ -3,12 +3,12 @@
   commandOrigin = "config"
   environment = "OPENAI_API_KEY"
   publish = "/opt/build/repo/static"
-  publishOrigin: "config"
-  functionsDirectory: /opt/build/repo/netlify/functions
-  redirects: from: /*
+  publishOrigin = "config"
+  functionsDirectory = "/opt/build/repo/netlify/functions"
+  redirects = "from: /*
       status: 200
-      to: /index.html
-      redirectsOrigin: config
+      to: /index.html"
+      redirectsOrigin = "config"
   functions = "netlify/functions"
 
 [[redirects]]
