--- a/netlify.toml
+++ b/netlify.toml
@@ -4,10 +4,12 @@ id = "533c0dba-00ad-47de-9dfd-ed42dd829ce"
 [build]
 command = "npm install --prefix eps-api && npm run build --prefix eps-api"
 commandOrigin = "config"
-environment = "OPENAI_API_KEY"
 publish = "/opt/build/repo/static"
 publishOrigin = "config"
 functionsDirectory = "/opt/build/repo/netlify/functions"
+
+[build.environment]
+OPENAI_API_KEY = "your_api_key_here"
 
 [[redirects]]
 from = "/*"
