--- a/netlify.toml
+++ b/netlify.toml
@@ -2,10 +2,7 @@
 id = "533c0dba-00ad-47de-9dfd-ed42dd829ce"
 
 [build]
-command = """
-npm install --prefix eps-api
-npm run build --prefix eps-api
-"""
+command = "./build.sh"
 commandOrigin = "config"
 publish = "/opt/build/repo/static"
 publishOrigin = "config"
